--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,12 @@
 <html>
     <head>
         <title>De Flor en Flor</title>
-        
+        <link rel= "icon" href="Font/ICONWEB.ico">
     </head>
     <body>
          <script src="main.ts"></script>
          
-        <style media = 'screen' type = 'text/css'>
+        <!-- <style media = 'screen' type = 'text/css'>
         @font-face {
             font-family: font1;
         src: url('Font/upheavtt.ttf');
@@ -17,7 +17,7 @@
         .fontPreload {
             font-family: font1;
         }
-        </style>
+        </style> -->
 
-        <div style="font-family: font1; position: absolute; left: -1000px; visibility: hidden;">.</div>  
+        <!-- <div style="font-family: font1; position: absolute; left: -1000px; visibility: hidden;">.</div>   -->
 </html>
