--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
         <link rel= "icon" href="Font/ICONWEB.ico">
     </head>
     <body>
-         <script src="./main.ts"></script>
+         <script src="../main.ts"></script>
          
         <!-- <style media = 'screen' type = 'text/css'>
         @font-face {
